	-> deleteLineIfBaselineDeleted property (configure via wrench tool)
	-> virtual keyboard configurable in gui (1st version)
	-> moved tag & text search to main search dialog in documents view
	-> find text and tag it
	
0.8.2:
	-> bugfixes: "no transcript loaded" when saving twice & virtual keyboards not working
	
0.8.3:
	-> splitting regions bug fixed
	-> swapped horizontal / vertical splitting semantic
	-> split parent line too if splitting baselines
	-> bugfix: group 4 compressed local images were displayed blank white
	-> Collection manager usability: document search possibility, load collections with double click,...
	-> Comments tool rearranged
	-> Document Table: mouse over shows complete document info 
	-> edit of virtual keyboard chars in gui saves back to virtualKeyboards.xml
	-> tei tags for Person, Place and Organization changed to "persName", "placeName" and "orgName"
	-> new tei tag "add" for addition
	-> tei export option: tag lines via <l>...</l> or <lb/> tag

0.8.4:
	-> gamma correction
	-> tif bug on windows fix
	-> Transcription and Segmentation profiles added
	-> createThumbs for local docs flag (configure via Menu -> File -> Create thumbs when opening local folder)
	-> Export: Possibility to export all chosen export formats in a ZIP file
	-> Docx export - consider soft breaks
	-> PDF import
	-> HTR based on RNN by Rostock integrated (alpha stage)
	
0.8.5:
	-> fixed a bug that occurred on duplicated documents with editorial declaration (collection-specific features)
	-> fixed a bug in the date setting widget in document metadata
	-> PAGE XML viewer can now edit XML and reload page from it
	
0.8.6:
	-> extended docx export settings for abbreviations
	-> PDF: images only export
	-> PDF: unique! tag values at end of PDF plus expansion for abbrevs
	-> export: choose current page and choose versions with their status
	-> docx index creation for tags (press F9 to create list in Word), export settings are shown in title page
	
	
	

	