@@ -356,6 +356,8 @@ CHANGES AND BUGFIXES
 	-> PDF: unique! tag values at end of PDF plus expansion for abbrevs
 	-> export: choose current page and choose versions with their status
 	-> docx index creation for tags (press F9 to create list in Word), export settings are shown in title page
+	-> change to next/previous region in transcription widget with alt+left/right key
+	-> batch layout analysis dialog
 	
 	
 	
